<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileDeveloperFragment">

    <!-- Header section -->
    <LinearLayout
        android:id="@+id/header_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_stat_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_dev_avatar"
            android:layout_width="@dimen/avatar_large"
            android:layout_height="@dimen/avatar_large"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/profil"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/dev_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/dev_nim"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dev_role"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_dev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_section"
        app:tabIndicatorColor="@android:color/white"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_dev"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs_dev"


        />
</androidx.constraintlayout.widget.ConstraintLayout>
