<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.PersonDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.FakerApp.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="">

            <ImageView
                android:id="@+id/img_header_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_stat_blue"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar_detail"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/profile_image"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp" />

                <TextView
                    android:id="@+id/tv_name_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Budi Santoso" />
            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_detail"
                app:navigationIcon="?attr/homeAsUpIndicator" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <!-- Section: Personal Info -->
            <TextView
                style="@style/TextSectionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/label_personal_info" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium">

                    <include
                        android:id="@+id/row_birthday"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_gender"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_email"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_phone"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_website"
                        layout="@layout/row_detail_item" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Section: Contact -->


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner"
                app:cardElevation="@dimen/card_elevation"/>

            <!-- Section: Address -->
            <TextView
                style="@style/TextSectionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/label_address" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_corner"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium">

                    <include
                        android:id="@+id/row_street"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_building"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_city"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_zipcode"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_country"
                        layout="@layout/row_detail_item" />

                    <include
                        android:id="@+id/row_coordinates"
                        layout="@layout/row_detail_item" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_open_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/action_open_map"
                        app:icon="@drawable/ic_map" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_large" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
